--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,10 @@ h1{
 p{
     font-size: 25px;
 }
-.links{
-    display: inline-block;
+nav ul li:hover{
+    /* display: inline-block; */
     padding: 5px;
     list-style: none;
+    color: rebeccapurple;
+    margin: auto;
 }
